| Bug #18005 | Creating a trigger on mysql.event leads to server crash on scheduler startup | ||
|---|---|---|---|
| Submitted: | 7 Mar 2006 0:43 | Modified: | 13 Jul 2006 20:06 |
| Reporter: | Andrey Hristov | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Stored Routines | Severity: | S3 (Non-critical) |
| Version: | 5.1.8 | OS: | Linux (SuSE 9.3) |
| Assigned to: | Jim Winstead | CPU Architecture: | Any |
[7 Mar 2006 0:43]
Andrey Hristov
[7 Mar 2006 1:01]
MySQL Verification Team
Thank you for the bug report. 060306 22:01:04 [Note] libexec/mysqld: ready for connections. Version: '5.1.8-beta-debug' socket: '/tmp/mysql.sock' port: 3306 Source distribution mysqld got signal 11;
[26 Jun 2006 22:37]
Jim Winstead
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/8272
[28 Jun 2006 14:30]
Dmitry Lenev
Note that this bug is fixed by the same patch as bug#18361.
[28 Jun 2006 17:59]
Jim Winstead
Pushed to mysql-5.0-runtime.
[13 Jul 2006 16:13]
Konstantin Osipov
Pushed into 5.1.12
[13 Jul 2006 20:06]
Paul DuBois
Noted in 5.1.12 changelog. Triggers on tables in the mysql database caused a server crash. Triggers for tables in this database now are disallowed.
