Bug #18005: Creating a trigger on mysql.event leads to server crash on scheduler startup Bug #18361: Triggers on mysql.user table cause server crash

Because they do not work, we do not allow creating triggers on tables
 within the 'mysql' schema.

 (They may be made to work and re-enabled at some later date, but not
 in 5.0 or 5.1.)